<resources>
    <string name="app_name">Freestyler</string>
    <string name="error_missing_email_client">There is no e-mail client installed.</string>
    <string name="sendMail">Send Email</string>
    <string name="mailSubject">Freestyler Feedback</string>
    <string name="errorRecorderPreparation">An error occurred during MediaRecorder preparation.</string>
    <string name="title_activity_game">Rap</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="Rap">Rap</string>
    <string name="RapButton">RapButton</string>
    <string name="Feedback">Feedback</string>
    <string name="FeedbackButton">FeedbackButton</string>
    <string name="Beat">Beat</string>
    <string name="Record">Record</string>
    <string name="zur_Onlineumfrage">zur_Onlineumfrage</string>
    <string name="Kommentare">Kommentare</string>
    <string name="Kommentar_per_Mail_absenden">Kommentar_absenden</string>
    <string name="ClickMe">ClickMe</string>
    <string name="clickFunc">clickFunc</string>
    <string name="Play">Play</string>
    <string name="Stop">Stop</string>
    <string name="Wort"></string>
    <string name="onlinesurvey">onlinesurvey</string>
    <string name="title_activity_end">Finished</string>
    <string name="listen_rap">listen_rap</string>
    <string name="save_rap">save_rap</string>
    <string name="mainmenu">mainmenu</string>
    <string name="yourtime">Your time</string>
    <string name="time">00:00</string>
    <string name="listofraps">list of raps</string>
    <string name="wordpackages">word packages</string>
    <string name="save">save</string>
    <string name="rap_play">Play</string>
    <string name="rap_delete">Delete</string>
    <string name="rap_start">Start</string>
    <string name="menu_word_packages">Word packages</string>
    <string name="menu_start">Start</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_list">Your raps</string>
    <string name="feedback_survey">Survey</string>
    <string name="feedback_email">E-mail</string>
    <string name="rap_save">Save </string>
    <string name="menu_back">Back to main menu</string>
    <string name="title_activity_wordpackages">Word packages</string>
    <string name="title_activity_list">Your raps</string>
    <string name="feedback_description">Your feedback is really important to us!</string>
</resources>
