<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="10dp"
    tools:context="me.speckmann.danny.EndActivity">

    <!-- Listen to rap Button-->
    <Button
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:id="@+id/listenrap"
        android:text="@string/rap_play"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/button_menu"
        android:layout_marginTop="20dp"
        android:onClick="buttonListenToRapOnClick"
        android:layout_below="@+id/time"
        android:layout_centerHorizontal="true" />

    <!-- Save rap Button-->
    <Button
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:id="@+id/saverap"
        android:text="@string/rap_save"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/button_menu"
        android:layout_marginTop="20dp"
        android:onClick="buttonSaveRapOnClick"
        android:layout_below="@+id/listenrap"
        android:layout_centerHorizontal="true" />

    <!-- Main menu Button-->
    <Button
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:id="@+id/mainmenu"
        android:text="@string/menu_back"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/button_menu"
        android:layout_marginTop="20dp"
        android:onClick="buttonMainMenuOnClick"
        android:layout_below="@+id/saverap" />

    <!--Your Time Text-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rap_your_time"
        android:id="@+id/yourtime"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <!--Time Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/time"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:layout_below="@+id/yourtime"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
